# Hajz-Ashal-Platform

./: .env.example  .gitignore  .replit  pyproject.toml  render.yaml  replit.md  requirements.txt
.agents/memory/: MEMORY.md  nullable-column-composite-pk.md  platform-admin-scope.md  replit-postgres-asyncpg.md
admin/: README.md  decisions.md  main.py  progress.md
admin/platform_admin/: module.py
admin/templates/: base_admin.html  dashboard.html  login.html
admin_app/: main.py
alembic/: env.py
alembic/versions/: 6f1c37d08763_fix_user_roles_pk_surrogate_id_since_.py  d0634e429453_add_platform_admins_table.py  fe6f3e916f72_initial_schema_tenants_branches_users_.py
app/: container.py  database.py  main.py  module_registry.py  settings.py  web_routes.py
core/application/: exceptions.py  pagination.py
core/domain/: base_entity.py  result.py
core/infrastructure/: base_repository.py  security.py  tenant_context.py
core/presentation/: error_handlers.py  middlewares.py  responses.py
docker/: Dockerfile  Dockerfile.admin  docker-compose.yml
docs/architecture/: 01-analysis-and-domains.md  02-database-design.md  03-layers-and-api-design.md  04-appointment-engine-and-identity.md  05-dashboard-reporting-subscription.md  06-folder-structure-and-deployment.md  README.md
modules/access_control/: module.py
modules/identity/: module.py
scripts/: create_platform_admin.py  seed_permissions.py
templates/: base.html  dashboard.html  dashboard_admin.html  dashboard_client.html  index.html  login.html  register_business.html  register_client.html
(+42 files in other folders)
